# StepUp-Pico

./: .bazelignore  .bazelrc  .clang-format  .gitignore  .gitmodules  CMakeLists.txt  GDB debugging notes.txt  LICENSE  LICENSE.md  MODULE.bazel  README.md  WORKSPACE  build_and_program.sh  deploy.py  deploy.sh  program.sh  program_monitor.sh  rp2040.code-workspace
.github/workflows/: cmake-single-platform.yml
App-StepUp/: BUILD  CMakeLists.txt  main.cpp
App-StepUp/include/: board_definitions.h  buzzer_control.hpp  default_config_parameters.h  joystick_control.hpp  led_control.hpp  main.h  pin_event_manager.hpp  pins_definitions.h  power_control.hpp  tmc_control.hpp  utils.h  voltage_monitoring.hpp
App-StepUp/src/: buzzer_control.cpp  joystick_control.cpp  led_control.cpp  pin_event_manager.cpp  power_control.cpp  tmc_control.cpp  utils.cpp  voltage_monitoring.cpp
App-StepUp/tests/: BUILD  test_tmc_control.cc
App-Template/: CMakeLists.txt  main.cpp  main.h
Application/App-Basic/: CMakeLists.txt  main.cpp
Application/App-Basic/include/: main.h
Application/App-Scheduling/: main.h
Application/App-StepUp/: BUILD  CMakeLists.txt  main.cpp
Application/App-StepUp/include/: joystick_control.hpp  main.h  pins_definitions.h  tmc_control.h  tmc_control.hpp
Application/App-StepUp/src/: joystick_control.cpp  tmc_control.cpp
Application/App-StepUp/tests/: BUILD
Common/: CRC.cpp  TMC_2300.cpp  utils.cpp  utils.h
Common/TMC_API/helpers/: RegisterAccess.h
Common/TMC_API/ic/: TMC2300.c
Config/: FreeRTOSConfig.h
Hardware/: README.md
Hardware/3D print files/: Bottom.stl  LED BOX.stl  README.md  Top.stl
Hardware/3D print files/Bambu Labs/: Bambu Labs Project - Enclosure.3mf  Bambu Labs Project - LED Box.3mf
Hardware/PCB files/v0.4/BoM/: StepUp.csv
Hardware/PCB files/v0.4/Drill files/: StepUp.drl
Hardware/PCB files/v0.4/Gerbers/: StepUp-B_Courtyard.gbr  StepUp-BottomLayer_Mask_Mask.gbs  StepUp-BottomLayer_Paste_Paste.gbp  StepUp-BottomLayer_Silk_Silkscreen.gbo  StepUp-Edge_Cuts.gm1  StepUp-F_Courtyard.gbr  StepUp-L1_TopLayer_Cu.gtl  StepUp-L2_InnerLayer1_Cu.g1  StepUp-L3_InnerLayer1_Cu.g2  StepUp-L4_BottomLayer_Cu.gbl  StepUp-Margin.gbr  StepUp-TopLayer_Mask_Mask.gts  StepUp-TopLayer_Paste_Paste.gtp  StepUp-TopLayer_Silk_Silkscreen.gto  StepUp-User_Eco1.gbr  StepUp-job.gbrjob
Hardware/PCB files/v0.4/Pick & Place/: positions-bottom.csv  positions-top.csv
Hardware/PCBA files/v1.0/Hand Assembly/: BoM - Hand Assembly components.csv  Interactive BoM.html
Hardware/PCBA files/v1.0/Manufacturing files/BoM/: PCBA.csv
Interfaces/: BUILD  CMakeLists.txt  ControlInterface.cpp  ControlInterface.h  ControlInterface.hpp
Libraries/: CMakeLists.txt
Libraries/AxisToActuatorEngine/: CMakeLists.txt
Libraries/AxisToActuatorEngine/src/: AxisToActuatorEngine.h  BUILD
Libraries/AxisToActuatorEngine/src/lib/: BUILD  axis_to_actuator_engine.cpp  axis_to_actuator_engine.h
Libraries/PicoUtils/: CMakeLists.txt
Libraries/PicoUtils/src/: PicoUtils.h
Libraries/PicoUtils/src/lib/: pico_utils.cpp  pico_utils.h  utils.cpp  utils.h
Libraries/TMC_API/: BUILD  TMC_API.h
Libraries/TMC_API/helpers/: API_Header.h  BUILD  CRC.h  RegisterAccess.h
Libraries/TMC_API/ic/: BUILD  TMC2300.c  TMC2300.h  TMC2300_Constants.h
Libraries/TMC_API/lib/: BUILD  CRC.h  Functions.h  RegisterAccess.h  TMC2300.c  TMC2300.h
Libraries/TestLibrary/src/: BUILD  TestLibrary.h
Libraries/TestLibrary/src/lib/: BUILD  test_function.hpp
Libraries/TestLibrary/test/: BUILD  test.cc
Libraries/TestLibrary/test/mocks/: BUILD  mock_function.hpp
Libraries/Utils/: CMakeLists.txt
Libraries/Utils/src/: BUILD
Libraries/Utils/src/lib/: BUILD  utils.cpp  utils.h
Libraries/Utils/test/: BUILD  test.cc
development_utilities/CRC/: Makefile  README.md  crc.c
teleplot layouts/: coolstep_plot_layout.json
testing-interfaces/pico-interface/: BUILD  pico_test.h  types.h
testing-interfaces/pico-interface/hardware/: adc.h  gpio.h
testing-interfaces/pico-interface/pico/: stdlib.h
testing_interfaces/pico_interface/: BUILD  pico_test.h  types.h
testing_interfaces/pico_interface/hardware/: adc.h  gpio.h
testing_interfaces/pico_interface/pico/: stdlib.h
utilities/boost_calcs/: boost_vout.py
